# ai_book

./: Build_Knowledge_Base_From_Texts.ipynb  .gitignore  README.md  alpaca_lora_infer.ipynb
Experiments/CV/ocr_with_bert/: README.md  pyproject.toml
Experiments/CV/ocr_with_bert/src/: draw.py  evaluate_images.py  evaluate_text.py  pipe.py  run.py  test_img_evaluation.py  test_txt_evaluation.py
Experiments/CV/ocr_with_bert/src/modules/: corrector.py  visualize.py
Experiments/CV/ocr_with_bert/src/modules/typo_correction/: typo_correction_infer.py
Experiments/CV/ocr_with_bert/src/modules/typo_detection/: dataset_big_typos.py  dataset_ready.py  dataset_typos.py  typo_detection_dataset.py  typo_detection_dataset_create.ipynb  typo_detection_dataset_create.py  typo_detection_infer.py  typo_detection_model.py  typo_detection_run.py  typo_detection_train.py
Experiments/CV/ocr_with_bert/src/modules/typo_pos_tagger/: prepare_vocab.py  stanford_model.py  typo_pos_dataset.py  typo_pos_infer.py  typo_pos_model.py
Experiments/CV/ocr_with_bert/src/modules/typo_pos_tagger/stanford-postagger/data/: enclitic-inflections.data
Experiments/CV/ocr_with_bert/src/modules/typo_pos_tagger/stanford-postagger/models/: arabic-train.tagger  arabic-train.tagger.props  (+6 more)
Experiments/huggingface/olm/: .gitignore  README.md  pyproject.toml
Experiments/huggingface/olm/src/: chunk_and_tokenize_datasets.py  create_tokenizer.py  t5_data_collator.py  train_model.py
LLMs/training/llama_peft_trl/: .gitignore  export_requirements_txt_from_poetry.sh  pyproject.toml  requirements.txt
LLMs/training/llama_peft_trl/src/: train.py
(+907 files in other folders)
